--- a/style/suganya.css
+++ b/style/suganya.css
@@ -82,11 +82,11 @@
     display: none;
     position: fixed;
     right: 0;
-    width: 70%;
+    width: 60%;
     height: 100vh;
     margin-top: 0;
     top: 0;
-    background-color: #15426d;
+    background-color: #5d001e;
     padding: 15px 0;
   }
 }
@@ -126,9 +126,9 @@
 
 .navbar_brand .navbar ul li a {
   text-decoration: none;
-  color: #6d6875;
+  color: #941750;
   position: relative;
-  font-size: 20px;
+  font-size: 19px;
   font-weight: bold;
 }
 
@@ -145,17 +145,17 @@
 }
 
 .navbar_brand .navbar .btn button {
-  background-color: #1b3b6f;
+  background-color: #5d001e;
   color: #ffffff;
-  -webkit-box-shadow: inset 0 0 0 0 #ff7d00;
-          box-shadow: inset 0 0 0 0 #ff7d00;
+  -webkit-box-shadow: inset 0 0 0 0 #ee4c7c;
+          box-shadow: inset 0 0 0 0 #ee4c7c;
   -webkit-transition: ease-out 0.5s;
   transition: ease-out 0.5s;
 }
 
 .navbar_brand .navbar .btn button:hover {
-  -webkit-box-shadow: inset 100px 0 0 0 #ff7d00;
-          box-shadow: inset 100px 0 0 0 #ff7d00;
+  -webkit-box-shadow: inset 100px 0 0 0 #ee4c7c;
+          box-shadow: inset 100px 0 0 0 #ee4c7c;
 }
 
 .navbar_brand .navbar .drop {
@@ -181,9 +181,9 @@
 }
 
 .navbar_brand .navbar .drop .drop_down:hover {
-  border-left: 3px solid #1b3b6f;
-  background-color: #fca311;
-  color: #ffffff;
+  border-left: 4px solid #5d001e;
+  background-color: #ee4c7c;
+  color: #5d001e;
 }
 
 .navbar_brand .navbar .drop .drop_down:hover p:hover {
@@ -191,10 +191,10 @@
 }
 
 .navbar_brand .navbar .drop p {
-  color: #1b3b6f;
+  color: #5d001e;
   font-weight: bold;
   padding-left: 10px;
-  font-size: 16px;
+  font-size: 15px;
   cursor: pointer;
 }
 
@@ -208,14 +208,19 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  border-bottom: 1px solid #bbdefb;
+  border-bottom: 1px solid #ff90b3;
   padding: 0 15px;
 }
 
 .navbar_brand .navbar .fa-whatsapp {
   font-weight: bold;
-  color: #25d362;
+  color: #5d001e;
   font-size: 27px;
+  cursor: pointer;
+}
+
+.navbar_brand .navbar .fa-whatsapp:hover {
+  color: #ee4c7c;
 }
 
 @media (max-width: 1200px) {
@@ -226,9 +231,13 @@
 }
 
 .navbar_brand .navbar .fa-whatsapp p {
-  color: #6d6875;
+  color: #ee4c7c;
   font-size: 20px;
   margin-top: 5px;
+}
+
+.navbar_brand .navbar .fa-whatsapp p:hover {
+  color: #5d001e;
 }
 
 @media (max-width: 1200px) {
@@ -239,9 +248,14 @@
 }
 
 .navbar_brand .navbar .fa-phone {
-  color: #1b3b6f;
+  color: #5d001e;
   font-size: 24px;
   font-weight: bold;
+  cursor: pointer;
+}
+
+.navbar_brand .navbar .fa-phone:hover {
+  color: #ee4c7c;
 }
 
 @media (max-width: 1200px) {
@@ -252,9 +266,13 @@
 }
 
 .navbar_brand .navbar .fa-phone p {
-  color: #6d6875;
+  color: #ee4c7c;
   font-size: 20px;
   margin-top: 6px;
+}
+
+.navbar_brand .navbar .fa-phone p:hover {
+  color: #5d001e;
 }
 
 @media (max-width: 1200px) {
@@ -291,7 +309,7 @@
 
 .search_bar .search_box {
   position: absolute;
-  border: 0.5px solid #bbdefb;
+  border: 0.5px solid #e3afbc;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -303,7 +321,7 @@
           align-items: center;
   gap: 0.1em;
   padding: 0 1em;
-  color: #ff7d00;
+  color: #5d001e;
   width: 47%;
   margin-top: 110px;
   -webkit-transform: translate(57%, 50%);
@@ -328,7 +346,7 @@
 }
 
 .search_bar .search_box:hover {
-  color: #1b3b6f;
+  color: #ee4c7c;
   cursor: pointer;
 }
 
@@ -368,8 +386,8 @@
 }
 
 .search_bar .popular h5 {
-  font-size: 21px;
-  color: #3d5a80;
+  font-size: 22px;
+  color: #5d001e;
 }
 
 .search_bar .content {
@@ -481,8 +499,9 @@
 }
 
 .search_bar .content ul li p {
-  background-color: #c8deec;
-  font-weight: bold;
+  background-color: #ff90b3;
+  cursor: pointer;
+  font-weight: 800;
   font-size: 11px;
   border-radius: 10px;
   margin: 4px 7px;
@@ -490,7 +509,8 @@
 }
 
 .search_bar .content ul li p:hover {
-  background: red;
+  background: #941750;
+  color: white;
 }
 
 .search_bar .moblie_app {
@@ -691,9 +711,9 @@
 .card_container .corpbiz_box {
   border: 1px solid;
   border: none;
-  background-color: #15426d;
+  background-color: #5d001e;
   border-radius: 10px;
-  color: #ffffff;
+  color: #ffccd5;
   padding: 50px;
 }
 
@@ -728,8 +748,8 @@
   margin: 20px 0;
   border: none;
   border-radius: 5px;
-  -webkit-box-shadow: 0 2px 10px 0 black;
-          box-shadow: 0 2px 10px 0 black;
+  -webkit-box-shadow: 0 2px 10px 0 #5d001e;
+          box-shadow: 0 2px 10px 0 #5d001e;
   -webkit-animation: pulse 4s ease-out infinite;
           animation: pulse 4s ease-out infinite;
 }
@@ -750,11 +770,15 @@
 
 .card_container .animation_card .cards h2 {
   font-size: 22px;
+  color: #5d001e;
+  font-weight: 800;
   margin-bottom: 20px;
 }
 
 .card_container .animation_card .cards p {
-  font-size: 18px;
+  font-size: 16px;
+  color: #ee4c7c;
+  font-weight: 600;
 }
 
 .card_container .animation_card .cards img {
@@ -765,6 +789,7 @@
 .business h2 {
   margin-left: 50px;
   font-size: 35px;
+  color: #5d001e;
 }
 
 @media (max-width: 900px) {
@@ -776,7 +801,7 @@
 }
 
 .business span {
-  color: #1b3b6f;
+  color: #ee4c7c;
 }
 
 .working_process_container {
@@ -819,7 +844,7 @@
   letter-spacing: 12px;
   font-size: 25px;
   padding: 1em;
-  color: #6d6875;
+  color: #e3afbc;
 }
 
 .working_process_container .working_text .working_process {
@@ -829,13 +854,14 @@
 .working_process_container .working_text .working_process h3 {
   font-size: 40px;
   margin-bottom: 30px;
-  color: #1b3b6f;
+  color: #5d001e;
 }
 
 .working_process_container .working_text .working_process p {
   font-size: 19px;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 32px;
+  color: #ee4c7c;
 }
 
 .working_process_container .iframe iframe {
@@ -854,7 +880,7 @@
   display: grid;
   -ms-grid-columns: (1fr)[4];
       grid-template-columns: repeat(4, 1fr);
-  background-color: #1b3b6f;
+  background-color: #5d001e;
   padding: 4em;
 }
 
@@ -887,7 +913,7 @@
   text-decoration: none;
   margin-bottom: 10px;
   display: block;
-  background-color: blue;
+  background-color: #941750;
   font-size: 20px;
   line-height: 50px;
   padding-left: 15px;
@@ -896,8 +922,8 @@
 }
 
 .service_content .business_registration .service_box a:hover {
-  background-color: Violet;
-  color: red;
+  background-color: #ff90b3;
+  color: #5d001e;
 }
 
 @media (max-width: 900px) {
@@ -911,9 +937,9 @@
   -webkit-writing-mode: vertical-lr;
       -ms-writing-mode: tb-lr;
           writing-mode: vertical-lr;
-  font-size: 22px;
-  letter-spacing: 12px;
-  color: gray;
+  font-size: 20px;
+  letter-spacing: 13px;
+  color: #e3afbc;
   margin-top: 60px;
   margin-left: -60px;
 }
@@ -942,20 +968,26 @@
   display: -ms-flexbox;
   display: flex;
   margin: auto;
+  margin-top: 20px;
   padding: 10px;
 }
 
 .service_content .registration_box h5 {
-  font-size: 25px;
+  font-size: 20px;
+  color: #5d001e;
+  padding: 0 20px;
   text-align: center;
   margin-bottom: 30px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .service_content .registration_box p {
   text-align: center;
   margin-bottom: 30px;
-  font-size: 17px;
+  color: #ee4c7c;
+  font-weight: 700;
+  padding: 0 12px;
+  font-size: 16px;
   line-height: 1.5em;
 }
 
@@ -964,6 +996,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  font-weight: bold;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -971,10 +1004,10 @@
       -ms-flex-align: center;
           align-items: center;
   cursor: pointer;
-  width: 100px;
-  height: 30px;
+  width: 130px;
+  height: 40px;
   border: none;
-  background-color: orangered;
+  background-color: #5d001e;
   outline: none;
   color: White;
   font-size: 16px;
@@ -982,17 +1015,17 @@
 }
 
 .service_content .registration_box button:hover {
-  background-color: blue;
-  color: Violet;
+  background-color: #ff90b3;
+  color: #5d001e;
   border: 1px solid Violet;
 }
 
 .user_info {
+  background-image: url(/asset/images/background-lap.jpg);
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (25%)[4];
       grid-template-columns: repeat(4, 25%);
-  background-color: #3d5a80;
   width: 100%;
   height: 200px;
 }
@@ -1029,13 +1062,19 @@
   }
 }
 
+.user_info .user_list p {
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 700;
+}
+
 .user_info .user_list img {
   width: 20%;
   margin-bottom: 10px;
 }
 
 .user_info .user_list:hover {
-  background-color: aqua;
+  background-color: #941750;
   color: black;
 }
 
@@ -1059,11 +1098,15 @@
 .corpiz_app .corpiz h2 {
   font-size: 40px;
   margin-bottom: 20px;
+  color: #212529;
 }
 
 .corpiz_app .corpiz p {
   margin-bottom: 20px;
   line-height: 30px;
+  font-size: 18px;
+  font-weight: 500;
+  width: 85%;
 }
 
 .corpiz_app .corpiz img {
@@ -1146,12 +1189,13 @@
   font-size: 25px;
   margin-top: 80px;
   text-align: center;
+  color: #5d001e;
 }
 
 .footer_content {
-  background-color: #15426d;
+  background-color: #5d001e;
   color: #ffffff;
-  padding: 4em;
+  padding: 80px 80px 25px 80px;
 }
 
 .footer_content .footer {
@@ -1174,17 +1218,25 @@
 
 .footer_content .footer .social_media .fa-brands {
   font-size: 20px;
-  color: #ffffff;
+  color: #ffccd5;
   cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.footer_content .footer .social_media .fa-brands:hover {
+  color: #b10f2e;
+}
+
+.footer_content .footer .social_media h3 {
+  color: #ee4c7c;
+  font-size: 18px;
+  margin-bottom: 10px;
 }
 
 .footer_content .footer .social_media span {
   font-size: 15px;
-  color: yellow;
-}
-
-.footer_content .footer .social_media span:hover {
-  color: #ff7d00;
+  margin-left: 10px;
+  color: #e3afbc;
 }
 
 .footer_content .footer .start_business {
@@ -1228,22 +1280,22 @@
 }
 
 .footer_content .footer h4 {
-  font-size: 20px;
-  margin-bottom: 20px;
+  font-size: 18px;
+  margin-bottom: 8px;
   font-weight: 700;
-  color: greenyellow;
+  color: #ee4c7c;
 }
 
 .footer_content .footer a {
   text-decoration: none;
-  color: red;
-  font-size: 16px;
-  line-height: 2em;
+  color: #e3afbc;
+  font-size: 15px;
+  line-height: 1.8em;
   cursor: pointer;
 }
 
 .footer_content .footer a:hover {
-  color: aqua;
+  text-decoration: underline;
 }
 
 .footer_content .footer_end {
@@ -1256,25 +1308,27 @@
   -webkit-box-pack: left;
       -ms-flex-pack: left;
           justify-content: left;
-  gap: 20px;
-  border-top: 1px solid blue;
-  border-bottom: 1px solid blue;
+  margin-top: 50px;
+  gap: 30px;
+  border-top: 1px solid #ae818d;
+  border-bottom: 1px solid #ae818d;
 }
 
 .footer_content .footer_end a {
   text-decoration: none;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  color: red;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  font-size: 15px;
+  color: #e3afbc;
 }
 
 .footer_content .footer_end a:hover {
-  color: orange;
+  color: #ee4c7c;
 }
 
 .footer_content p {
-  color: white;
-  margin-top: 40px;
+  color: #ff90b3;
+  margin-top: 20px;
   text-align: center;
 }
 /*# sourceMappingURL=suganya.css.map */
