--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -9,7 +9,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Noto Sans", sans-serif;
-  // background: pink;
 }
 
 .navbar_brand {
@@ -57,11 +56,11 @@
       display: none;
       position: fixed;
       right: 0;
-      width: 70%;
+      width: 60%;
       height: 100vh;
       margin-top: 0;
       top: 0;
-      background-color: #15426d;
+      background-color: #5d001e;
       padding: 15px 0;
     }
     ul {
@@ -84,9 +83,9 @@
         }
         a {
           text-decoration: none;
-          color: $gray;
+          color: #941750;
           position: relative;
-          font-size: 20px;
+          font-size: 19px;
           font-weight: bold;
 
           @media (max-width: 1200px) {
@@ -103,24 +102,13 @@
     .btn {
       button {
         @extend .button_format;
-        background-color: $blue;
+        background-color: #5d001e;
         color: #ffffff;
-        box-shadow: inset 0 0 0 0 #ff7d00;
+        box-shadow: inset 0 0 0 0 #ee4c7c;
         transition: ease-out 0.5s;
         &:hover {
-          box-shadow: inset 100px 0 0 0 #ff7d00;
+          box-shadow: inset 100px 0 0 0 #ee4c7c;
         }
-        // @media (max-width: 1200px) {
-        //   // box-shadow: inset 0 0 0 0 #ff7d00;
-        //   background: #ff7d00;
-        //   box-shadow: none;
-
-        //   // transition: ease-out 0.8s;
-        //   &:hover {
-        //     background: #15426d;
-        //     // box-shadow: inset 100px 0 0 0 #ff7d00;
-        //   }
-        // }
       }
     }
 
@@ -141,40 +129,47 @@
         width: 100%;
       }
       .drop_down:hover {
-        border-left: 3px solid $blue;
-        background-color: $orange;
-        color: $white;
+        border-left: 4px solid #5d001e;
+        background-color: #ee4c7c;
+        color: #5d001e;
         p:hover {
           color: $white;
         }
       }
       p {
-        color: $blue;
+        color: #5d001e;
         font-weight: bold;
         padding-left: 10px;
-        font-size: 16px;
+        font-size: 15px;
         cursor: pointer;
       }
       .drop_down {
         @include collaborate;
         align-items: center;
-        border-bottom: 1px solid $light_blue;
+        border-bottom: 1px solid #ff90b3;
         padding: 0 15px;
       }
     }
     .fa-whatsapp {
       font-weight: bold;
-      color: $whatsapp;
+      color: #5d001e;
       font-size: 27px;
+      cursor: pointer;
+      &:hover {
+        color: #ee4c7c;
+      }
       @media (max-width: 1200px) {
         color: #ffffff;
         font-size: 30px;
       }
 
       p {
-        color: $gray;
+        color: #ee4c7c;
         font-size: 20px;
         margin-top: 5px;
+        &:hover {
+          color: #5d001e;
+        }
         @media (max-width: 1200px) {
           color: #ffffff;
           font-weight: normal;
@@ -182,18 +177,25 @@
       }
     }
     .fa-phone {
-      color: $blue;
+      color: #5d001e;
       font-size: 24px;
       font-weight: bold;
+      cursor: pointer;
+      &:hover {
+        color: #ee4c7c;
+      }
       @media (max-width: 1200px) {
         color: #ffffff;
         font-size: 30px;
       }
 
       p {
-        color: $gray;
+        color: #ee4c7c;
         font-size: 20px;
         margin-top: 6px;
+        &:hover {
+          color: #5d001e;
+        }
         @media (max-width: 1200px) {
           color: #ffffff;
           font-weight: normal;
@@ -222,12 +224,12 @@
 
   .search_box {
     position: absolute;
-    border: 0.5px solid $light_blue;
+    border: 0.5px solid #e3afbc;
     @include collaborate;
     align-items: center;
     gap: 0.1em;
     padding: 0 1em;
-    color: #ff7d00;
+    color: #5d001e;
     width: 47%;
     margin-top: 110px;
     transform: translate(57%, 50%);
@@ -244,7 +246,7 @@
     }
 
     &:hover {
-      color: $blue;
+      color: #ee4c7c;
       cursor: pointer;
     }
 
@@ -270,8 +272,8 @@
       display: none;
     }
     h5 {
-      font-size: 21px;
-      color: #3d5a80;
+      font-size: 22px;
+      color: #5d001e;
     }
   }
   .content {
@@ -330,14 +332,16 @@
 
       li {
         p {
-          background-color: #c8deec;
-          font-weight: bold;
+          background-color: #ff90b3;
+          cursor: pointer;
+          font-weight: 800;
           font-size: 11px;
           border-radius: 10px;
           margin: 4px 7px;
           padding: 6px;
           &:hover {
-            background: red;
+            background: #941750;
+            color: white;
           }
         }
       }
@@ -460,9 +464,9 @@
   .corpbiz_box {
     border: 1px solid;
     border: none;
-    background-color: #15426d;
+    background-color: #5d001e;
     border-radius: 10px;
-    color: #ffffff;
+    color: #ffccd5;
     padding: 50px;
     h3 {
       font-size: 24px;
@@ -488,7 +492,7 @@
       margin: 20px 0;
       border: none;
       border-radius: 5px;
-      box-shadow: 0 2px 10px 0 rgb(0, 0, 0.3);
+      box-shadow: 0 2px 10px 0 #5d001e;
       animation: pulse 4s ease-out infinite;
       @keyframes pulse {
         10% {
@@ -497,10 +501,14 @@
       }
       h2 {
         font-size: 22px;
+        color: #5d001e;
+        font-weight: 800;
         margin-bottom: 20px;
       }
       p {
-        font-size: 18px;
+        font-size: 16px;
+        color: #ee4c7c;
+        font-weight: 600;
       }
       img {
         margin-bottom: 10px;
@@ -514,6 +522,7 @@
   h2 {
     margin-left: 50px;
     font-size: 35px;
+    color: #5d001e;
 
     @media (max-width: 900px) {
       font-size: 25px;
@@ -522,7 +531,7 @@
     }
   }
   span {
-    color: $blue;
+    color: #ee4c7c;
   }
 }
 
@@ -545,19 +554,20 @@
       letter-spacing: 12px;
       font-size: 25px;
       padding: 1em;
-      color: $gray;
+      color: #e3afbc;
     }
     .working_process {
       padding: 5em;
       h3 {
         font-size: 40px;
         margin-bottom: 30px;
-        color: $blue;
+        color: #5d001e;
       }
       p {
         font-size: 19px;
-        font-weight: 500;
+        font-weight: 700;
         line-height: 32px;
+        color: #ee4c7c;
       }
     }
   }
@@ -573,7 +583,7 @@
 .service_content {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  background-color: $blue;
+  background-color: #5d001e;
   padding: 4em;
   @media (max-width: 900px) {
     grid-template-columns: 1fr;
@@ -591,15 +601,15 @@
         text-decoration: none;
         margin-bottom: 10px;
         display: block;
-        background-color: blue;
+        background-color: #941750;
         font-size: 20px;
         line-height: 50px;
         padding-left: 15px;
         padding-right: 20px;
         color: White;
         &:hover {
-          background-color: Violet;
-          color: red;
+          background-color: #ff90b3;
+          color: #5d001e;
         }
       }
       @media (max-width: 900px) {
@@ -609,9 +619,9 @@
     }
     .vertical_service {
       writing-mode: vertical-lr;
-      font-size: 22px;
-      letter-spacing: 12px;
-      color: gray;
+      font-size: 20px;
+      letter-spacing: 13px;
+      color: #e3afbc;
       margin-top: 60px;
       margin-left: -60px;
       @media (max-width: 900px) {
@@ -631,48 +641,56 @@
       width: 30%;
       display: flex;
       margin: auto;
+      margin-top: 20px;
       padding: 10px;
     }
     h5 {
-      font-size: 25px;
+      font-size: 20px;
+      color: #5d001e;
+      padding: 0 20px;
       text-align: center;
       margin-bottom: 30px;
-      margin-top: 20px;
+      margin-top: 10px;
     }
     p {
       text-align: center;
       margin-bottom: 30px;
-      font-size: 17px;
+      color: #ee4c7c;
+      font-weight: 700;
+      padding: 0 12px;
+      font-size: 16px;
       line-height: 1.5em;
     }
 
     button {
       margin: auto;
       display: flex;
+      font-weight: bold;
       justify-content: center;
       align-items: center;
       cursor: pointer;
-      width: 100px;
-      height: 30px;
+      width: 130px;
+      height: 40px;
       border: none;
-      background-color: orangered;
+      background-color: #5d001e;
       outline: none;
       color: White;
       font-size: 16px;
       z-index: -1;
     }
     button:hover {
-      background-color: blue;
-      color: Violet;
+      background-color: #ff90b3;
+      color: #5d001e;
       border: 1px solid Violet;
     }
   }
 }
 
 .user_info {
+  background-image: url(/asset/images/background-lap.jpg);
   display: grid;
   grid-template-columns: repeat(4, 25%);
-  background-color: #3d5a80;
+  // background-color: #3d5a80;
   width: 100%;
   height: 200px;
   @media (max-width: 900px) {
@@ -689,12 +707,17 @@
     @media (max-width: 900px) {
       padding: 1em;
     }
+    p {
+      color: #ffffff;
+      font-size: 20px;
+      font-weight: 700;
+    }
     img {
       width: 20%;
       margin-bottom: 10px;
     }
     &:hover {
-      background-color: aqua;
+      background-color: #941750;
       color: black;
     }
   }
@@ -719,10 +742,14 @@
     h2 {
       font-size: 40px;
       margin-bottom: 20px;
+      color: #212529;
     }
     p {
       margin-bottom: 20px;
       line-height: 30px;
+      font-size: 18px;
+      font-weight: 500;
+      width: 85%;
     }
     img {
       width: 200px;
@@ -769,12 +796,14 @@
   font-size: 25px;
   margin-top: 80px;
   text-align: center;
+  color: #5d001e;
 }
 
 .footer_content {
-  background-color: #15426d;
+  background-color: #5d001e;
   color: #ffffff;
-  padding: 4em;
+  padding: 80px 80px 25px 80px;
+
   .footer {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -783,17 +812,25 @@
     .social_media {
       display: flex;
       flex-direction: column;
+
       .fa-brands {
         font-size: 20px;
-        color: #ffffff;
+        color: #ffccd5;
         cursor: pointer;
+        margin-bottom: 10px;
+        &:hover {
+          color: #b10f2e;
+        }
+      }
+      h3 {
+        color: #ee4c7c;
+        font-size: 18px;
+        margin-bottom: 10px;
       }
       span {
         font-size: 15px;
-        color: yellow;
-        &:hover {
-          color: #ff7d00;
-        }
+        margin-left: 10px;
+        color: #e3afbc;
       }
     }
 
@@ -814,21 +851,20 @@
       flex-direction: column;
     }
     h4 {
-      font-size: 20px;
-      margin-bottom: 20px;
+      font-size: 18px;
+      margin-bottom: 8px;
       font-weight: 700;
-      color: greenyellow;
+      color: #ee4c7c;
     }
     a {
       text-decoration: none;
-      // list-style: none;
-      color: red;
-      font-size: 16px;
+      color: #e3afbc;
+      font-size: 15px;
       // font-weight: 100;
-      line-height: 2em;
+      line-height: 1.8em;
       cursor: pointer;
       &:hover {
-        color: aqua;
+        text-decoration: underline;
       }
     }
   }
@@ -836,22 +872,24 @@
     display: flex;
     align-items: center;
     justify-content: left;
-    gap: 20px;
-    border-top: 1px solid blue;
-    border-bottom: 1px solid blue;
+    margin-top: 50px;
+    gap: 30px;
+    border-top: 1px solid #ae818d;
+    border-bottom: 1px solid #ae818d;
     a {
       text-decoration: none;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      color: red;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      font-size: 15px;
+      color: #e3afbc;
       &:hover {
-        color: orange;
+        color: #ee4c7c;
       }
     }
   }
   p {
-    color: white;
-    margin-top: 40px;
+    color: #ff90b3;
+    margin-top: 20px;
     text-align: center;
   }
 }
