--- a/style/suganya.css
+++ b/style/suganya.css
@@ -1192,6 +1192,37 @@
   color: #5d001e;
 }
 
+.apps_wrapper {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  z-index: -1000;
+}
+
+.apps_wrapper .app_slider {
+  width: 100%;
+  height: 200px;
+  padding: 4em;
+  z-index: -1000;
+}
+
+.apps_wrapper .app_slider img {
+  cursor: pointer;
+  display: block;
+  width: 150px;
+  height: 80px;
+  place-items: center;
+  z-index: -1000;
+}
+
 .footer_content {
   background-color: #5d001e;
   color: #ffffff;
