--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -799,6 +799,29 @@
   color: #5d001e;
 }
 
+.apps_wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  z-index: -1000;
+  .app_slider {
+    width: 100%;
+    height: 200px;
+    padding: 4em;
+    z-index: -1000;
+    img {
+      cursor: pointer;
+      display: block;
+      width: 150px;
+      height: 80px;
+      place-items: center;
+      z-index: -1000;
+    }
+  }
+}
+
 .footer_content {
   background-color: #5d001e;
   color: #ffffff;
