--- a/style/suganya.css
+++ b/style/suganya.css
@@ -1192,7 +1192,7 @@
   color: #5d001e;
 }
 
-.apps_wrapper {
+.swiper {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1207,14 +1207,14 @@
   z-index: -1000;
 }
 
-.apps_wrapper .app_slider {
+.swiper .app_slider {
   width: 100%;
   height: 200px;
   padding: 4em;
   z-index: -1000;
 }
 
-.apps_wrapper .app_slider img {
+.swiper .app_slider img {
   cursor: pointer;
   display: block;
   width: 150px;
@@ -1361,5 +1361,14 @@
   color: #ff90b3;
   margin-top: 20px;
   text-align: center;
+}
+
+.visit_line {
+  padding: 2em;
+  font-size: 22px;
+}
+
+.visit_line span {
+  color: #5d001e;
 }
 /*# sourceMappingURL=suganya.css.map */
