--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -460,6 +460,7 @@
   padding: 50px;
   @media (max-width: 900px) {
     display: block;
+    padding: 0;
   }
   .corpbiz_box {
     border: 1px solid;
@@ -521,8 +522,11 @@
 .business {
   h2 {
     margin-left: 50px;
-    font-size: 35px;
+    font-size: 40px;
     color: #5d001e;
+    @media (max-width: 900px) {
+      margin-left: 0;
+    }
 
     @media (max-width: 900px) {
       font-size: 25px;
@@ -558,25 +562,41 @@
     }
     .working_process {
       padding: 5em;
-      h3 {
-        font-size: 40px;
-        margin-bottom: 30px;
-        color: #5d001e;
-      }
+
       p {
         font-size: 19px;
         font-weight: 700;
         line-height: 32px;
         color: #ee4c7c;
       }
+      @media (max-width: 900px) {
+        padding: 10px;
+      }
     }
   }
+
   .iframe iframe {
     width: 100%;
     height: 100%;
     @media (max-width: 1000px) {
       display: none;
     }
+  }
+}
+
+.process_heading {
+  h3 {
+    font-size: 38px;
+    margin-bottom: -70px;
+    color: #5d001e;
+    margin-left: 190px;
+    margin-top: 60px;
+    @media (max-width: 900px) {
+      font-size: 30px;
+    }
+    // @media (max-width: 635px) {
+    //   margin-bottom: 60px;
+    // }
   }
 }
 
@@ -735,9 +755,16 @@
 
   width: 75%;
   border-radius: 20px;
+  @media (max-width: 900px) {
+    padding: 10px;
+    margin-top: 0;
+  }
 
   .corpiz {
     padding-right: 500px;
+    @media (max-width: 900px) {
+      padding-right: 0;
+    }
 
     h2 {
       font-size: 40px;
@@ -750,6 +777,9 @@
       font-size: 18px;
       font-weight: 500;
       width: 85%;
+      @media (max-width: 900px) {
+        width: 100%;
+      }
     }
     img {
       width: 200px;
@@ -798,7 +828,6 @@
   text-align: center;
   color: #5d001e;
 }
-
 .swiper {
   width: 100%;
   display: flex;
@@ -806,11 +835,13 @@
   align-items: center;
   overflow: hidden;
   z-index: -1000;
-  .app_slider {
+
+  .swiper-slide {
     width: 100%;
     height: 200px;
     padding: 4em;
     z-index: -1000;
+
     img {
       cursor: pointer;
       display: block;
@@ -826,11 +857,17 @@
   background-color: #5d001e;
   color: #ffffff;
   padding: 80px 80px 25px 80px;
+  @media (max-width: 900px) {
+    padding: 20px;
+  }
 
   .footer {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 30px;
+    @media (max-width: 900px) {
+      grid-template-columns: 1fr;
+    }
 
     .social_media {
       display: flex;
@@ -899,6 +936,10 @@
     gap: 30px;
     border-top: 1px solid #ae818d;
     border-bottom: 1px solid #ae818d;
+    @media (max-width: 900px) {
+      flex-direction: column;
+    }
+
     a {
       text-decoration: none;
       margin-top: 10px;
