--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -853,6 +853,63 @@
   }
 }
 
+.visit_line {
+  padding: 2em;
+  font-size: 22px;
+  span {
+    color: #5d001e;
+  }
+}
+
+.articles {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  padding: 3em;
+  .articles_card {
+    background-color: #5d001e;
+    cursor: pointer;
+    padding: 1em;
+    border-radius: 10px;
+    img {
+      width: 8%;
+      border-radius: 50%;
+    }
+    span {
+      color: white;
+      font-size: 13px;
+      font-weight: 700;
+      border-bottom: 1px solid gray;
+      margin-top: 30px;
+    }
+    button {
+      padding: 5px 6px;
+      border-radius: 2px;
+      border: none;
+      outline: none;
+      margin-top: 80px;
+      margin-bottom: 20px;
+      font-size: 12px;
+      font-weight: 700;
+      background-color: #941750;
+      color: White;
+      cursor: pointer;
+    }
+    h3 {
+      font-size: 17px;
+      color: white;
+      font-weight: 700;
+    }
+    p {
+      font-size: 20px;
+      color: yellow;
+      font-weight: 700;
+      margin-top: 15px;
+      margin-bottom: 30px;
+    }
+  }
+}
+
 .footer_content {
   background-color: #5d001e;
   color: #ffffff;
@@ -955,13 +1012,5 @@
     color: #ff90b3;
     margin-top: 20px;
     text-align: center;
-  }
-}
-
-.visit_line {
-  padding: 2em;
-  font-size: 22px;
-  span {
-    color: #5d001e;
   }
 }
