--- a/style/suganya.css
+++ b/style/suganya.css
@@ -27,7 +27,7 @@
           align-items: center;
   position: fixed;
   width: 100%;
-  background: #ffffff;
+  background: #eaf4f4;
   top: 0;
   left: 0;
   right: 0;
@@ -1327,6 +1327,35 @@
   font-weight: 700;
   margin-top: 15px;
   margin-bottom: 30px;
+}
+
+.read_articles {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.read_articles button {
+  cursor: pointer;
+  padding: 8px 25px;
+  font-size: 20px;
+  font-weight: 700;
+  border-radius: 5px;
+  margin-bottom: 60px;
+  outline: none;
+  border: none;
+  background-color: orange;
+  color: white;
+}
+
+.read_articles button:hover {
+  background: #5d001e;
 }
 
 .footer_content {
