--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -931,6 +931,42 @@
   }
 }
 
+.bottom_bar {
+  display: flex;
+  background-color: yellowgreen;
+  height: 200px;
+  padding-left: 15%;
+  padding-top: 20px;
+
+  h1 {
+    font-size: 35px;
+    color: #ffffff;
+    margin-top: 30px;
+  }
+  .subscribe input {
+    padding: 10px;
+    margin-left: 60px;
+    margin-top: 50px;
+    width: 350px;
+    height: 40px;
+    border-radius: 15px;
+    color: #b10f2e;
+    border-color: yellow;
+  }
+  button {
+    font-size: 15px;
+    border: none;
+    padding: 8px 14px;
+    margin-left: 50px;
+    background: #c81041;
+    color: white;
+    cursor: pointer;
+    &:hover {
+      background: blueviolet;
+    }
+  }
+}
+
 .footer_content {
   background-color: #5d001e;
   color: #ffffff;
